src/style.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,500;0,800;1,500;1,600;1,900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,500;0,600;0,800;1,500;1,600;1,900&display=swap');

html, body {
    height: 100%;
    width: 100%;
    margin: 0;
}

:root {
    font-size: 14px;
    font-family: 'Work Sans', sans-serif;
}

#header {
    text-align: center;
    font-size: 36px;
    font-weight: 600;
    display: flex;
    border: 4px solid black;
}

#header div {
    margin-left: 20px;
    display: flex;
    align-items: center;
}

#header img {
    height: 100px;
    width: 100px;
}

#products-display {
    margin: 20px;
    display: flex;
    flex-direction: row;
}

#story-container {
    font-size: 26px;
    width: 40%;
    margin-left: 40px;
}

#photo-container {
    width: 60%;
    height: auto;
}

#photo-container img {
    height: 100%;
    width: 100%;
}

hr {
    margin-top: 40px;
    width: 100%;
    border: 1.5px solid black;
}

